--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "a space-rpg game in typescript",
 	"main": "example/index.js",
 	"scripts": {
-		"test": "ts-mocha src/test/**/*.test.ts"
+        "test": "ts-mocha src/test/**/*.test.ts",
+        "dependency-diagram":"npx arkit -d src/lib"
 	},
 	"repository": {
 		"type": "git",
