--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		// "allowJs": true,                       /* Allow javascript files to be compiled. */
 		// "checkJs": true,                       /* Report errors in .js files. */
 		// "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-		"declaration": true,                   /* Generates corresponding '.d.js' file. */
+		"declaration": true /* Generates corresponding '.d.js' file. */,
 		// "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.js' file. */
 		// "sourceMap": true,                     /* Generates corresponding '.map' file. */
 		// "outFile": "./",                       /* Concatenate and emit output to single file. */
@@ -64,5 +64,5 @@
 		/* Advanced Options */
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
-	"exclude": ["src/test/**/*.test.ts"]
+	"exclude": ["src/test/**/*.test.ts", "build"]
 }
