--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "a space-rpg game in typescript",
 	"main": "build/lib/main.js",
 	"scripts": {
-        "test": "ts-mocha src/test/**/*.test.ts",
-        "dependency-diagram":"npx arkit -d src/lib",
-        "compile":"tsc"
+		"test": "ts-mocha src/test/**/*.test.ts",
+		"dependency-diagram": "npx arkit -d src/lib",
+		"compile": "tsc"
 	},
 	"repository": {
 		"type": "git",
@@ -19,11 +19,17 @@
 	},
 	"homepage": "https://github.com/frasermcc9/SpaceY#readme",
 	"dependencies": {
-		"mongoose": "^5.9.19"
+		"express": "^4.17.1",
+		"json-stringify-safe": "^5.0.1",
+		"mongoose": "^5.9.19",
+		"socket.io": "^2.3.0"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.7",
+		"@types/json-stringify-safe": "^5.0.0",
 		"@types/mocha": "^7.0.2",
 		"@types/mongoose": "^5.7.27",
+		"@types/socket.io": "^2.1.8",
 		"mocha": "^8.0.1",
 		"must": "^0.13.4",
 		"nyc": "^15.1.0",
