--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "nyc": "^15.1.0",
     "prettier": "^2.0.5",
     "ts-mocha": "^7.0.0",
-    "tsconfig-paths": "^3.9.0"
+    "ts-node": "^8.10.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.9.7"
   }
 }
