--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "json-stringify-safe": "^5.0.1",
+    "mnemonist": "^0.38.0",
     "mongoose": "^5.9.19",
     "socket.io": "^2.3.0"
   },
